# orange-fur

./: .gitignore  DEVLOG.md  README.md  USERGUIDE.md  pyproject.toml
orange_fur/: __init__.py  alphabet.py  cli.py  config.py  constraints.py  decimate.py  echoes.py  fields.py  graph.py  layers.py  macro.py  motifs.py  orc.py  orchestra.py  phenotype.py  render.py  routing.py  score.py  sections.py  tapeloops.py  tuning.py
tests/: test_p0.py  test_p1.py  test_p10.py  test_p11.py  test_p12.py  test_p13.py  test_p14.py  test_p2.py  test_p3.py  test_p4.py  test_p5.py  test_p6.py  test_p7.py  test_p8.py  test_p9.py
tools/: fit_calibration.py
